# implib-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
fuzz/: Cargo.toml  dict.txt
fuzz/fuzz_targets/: fuzz_implib.rs
src/: error.rs  gnu.rs  lib.rs  msvc.rs
src/ar/: mod.rs  write.rs
src/def/: error.rs  mod.rs  parser.rs
tests/: test_import_lib.rs
