[package]
name = "implib"
version = "0.5.1"
description = "Generate Windows import library from module definition file"
edition = "2021"
license = "MIT"
repository = "https://github.com/messense/implib-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.8.0"
memoffset = "0.9.0"
object = { version = "0.39.1", default-features = false, features = ["pe"] }

[features]
default = ["msvc", "gnu"]
msvc = []
gnu = ["object/write_std"]
